# wiki2man

./: .gitignore  LICENSE.md  README.md  environment.yml  pyproject.toml  setup.cfg
src/wiki2man/: __init__.py  __main__.py  connect.py  wikipage.py
