[metadata]
name = wiki2man
version = 0.6.0
author = Seth Underwood
description = Extract wiki text from a MediaWiki Wiki, and create a man page.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.gfdl.noaa.gov/Seth.Underwood/wiki2man
project_urls =
  Bug Tracker = https://gitlab.gfdl.noaa.gov/Seth.Underwod/wiki2man/-/issues
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent

[options]
package_dir =
   = src
python_required = >=3.6
install_requires =
  requests

[options.entry_points]
console_scripts =
   wiki2man = wiki2man.__main__:main
